--- a/css/style.less
+++ b/css/style.less
@@ -1,6 +1,8 @@
+
 *{
     list-style-type: none;
 }
+
 ul{
     padding: 0;
 }
@@ -65,6 +67,7 @@ min-height: 2rem;
         background-color: rgb(32, 204, 124);
     }
 }
+
 .math_act-group{
     margin: 10px auto;
     width: 158px;
@@ -75,6 +78,9 @@ min-height: 2rem;
     display: block;
     background-color: #49a3d8af;
     border: 0;
+}
+.disabled{
+    background-color: rgb(187, 160, 7);
 }
 
 @media screen and (max-device-width: 420px) {
